[package]
name = "pdf-secure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.6.3"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
pdfium-render = "0.7.30"
image = "0.24.5"
show-image = { version = "0.13.1", features = ["image"] }
glob = "0.3.1"
hex = "0.4.3"

[[bin]]
name = "setup"
path = "src/setup.rs"

[[bin]]
name = "run"
path = "src/main.rs"
